@@ -63,7 +63,7 @@ class ExecuteTest(TestBase):
             conn.execute('delete from users')
 
     # some psycopg2 versions bomb this.
-    @testing.fails_on_everything_except('mysql+mysqldb',
+    @testing.fails_on_everything_except('mysql+mysqldb', 'mysql+pymysql',
             'mysql+mysqlconnector', 'postgresql')
     @testing.fails_on('postgresql+zxjdbc', 'sprintf not supported')
     def test_raw_sprintf(self):
@@ -87,7 +87,8 @@ class ExecuteTest(TestBase):
     @testing.skip_if(lambda : testing.against('mysql+mysqldb'),
                      'db-api flaky')
     @testing.fails_on_everything_except('postgresql+psycopg2',
-            'postgresql+pypostgresql', 'mysql+mysqlconnector')
+            'postgresql+pypostgresql', 'mysql+mysqlconnector', 
+            'mysql+pymysql')
     def test_raw_python(self):
         for conn in testing.db, testing.db.connect():
             conn.execute('insert into users (user_id, user_name) '
